# BRL-Laptimer-7Inch

./: .gitignore  CMakeLists.txt  README.md  Tracks.BDB  extra_scripts.py  partitions.csv  platformio.ini  sdkconfig.defaults
adapter-firmware/: README.md  platformio.ini
android-app/: BUILD.md  app.json  build.ps1  eas.json  package-lock.json  package.json
cam-firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
cam-firmware/main/: CMakeLists.txt  idf_component.yml  main.c
cam-firmware/main/cam_link/: cam_link_protocol.h  cam_link_uart.c  cam_link_uart.h
cam-firmware/main/capture/: capture.c  capture.h
cam-firmware/main/http_server/: http_server.c  http_server.h
cam-firmware/main/recorder/: avi_writer.c  avi_writer.h  recorder.c  recorder.h  sd_mgr.c  sd_mgr.h  sidecar.c  sidecar.h
cam-firmware/main/wifi_sta/: wifi_sta.c  wifi_sta.h
include/: brl_fonts.h  i18n.h  lv_conf.h
installer/: bdb_setup.iss  (+4 more)
main/: CMakeLists.txt  compat.h  idf_component.yml  lv_code.c  lv_code.cpp  main.c
main/assets/: logo_data.cpp  logo_data.h  logo_placeholder.h
main/audio/: mic.cpp  mic.h
main/camera_link/: cam_link.cpp  cam_link.h  cam_link_pump.cpp
main/can/: can_bus.cpp  can_bus.h
main/data/: car_profile.cpp  car_profile.h  lap_data.h  track_db.cpp  track_db.h
main/gps/: gps.cpp  gps.h
main/obd/: computed_pids.cpp  computed_pids.h  obd_bt.cpp  obd_bt.h  obd_dynamic.cpp  obd_dynamic.h  obd_pid_cache.cpp  obd_pid_cache.h  obd_status.cpp  obd_status.h  universal_obd_pids.h
main/sensors/: analog_in.cpp  analog_in.h
main/storage/: sd_mgr.cpp  sd_mgr.h  session_store.cpp  session_store.h  tbrl_loader.cpp  tbrl_loader.h  track_best.cpp  track_best.h  track_update.cpp  track_update.h
main/timing/: lap_timer.cpp  lap_timer.h  live_delta.cpp  live_delta.h
main/ui/: app.cpp  app.h  brl_fonts.h  cam_preview.cpp  cam_preview.h  dash_config.cpp  dash_config.h  i18n.cpp  i18n.h  screen_splash.cpp  screen_timing.cpp  screen_timing.h  screen_video_settings.cpp  screen_video_settings.h  theme.h
main/ui/fonts/: brl_font_montserrat_128.c  brl_font_montserrat_14.c  brl_font_montserrat_16.c  brl_font_montserrat_160.c  brl_font_montserrat_20.c  brl_font_montserrat_24.c  brl_font_montserrat_32.c  brl_font_montserrat_40.c  brl_font_montserrat_48.c  brl_font_montserrat_64.c  brl_font_montserrat_96.c
main/video/: avi_writer.cpp  avi_writer.h  font8x16.c  font8x16.h  overlay.cpp  overlay.h  uvc_stream.cpp  uvc_stream.h  video_mgr.cpp  video_mgr.h  video_pipeline.cpp  video_pipeline.h
main/wifi/: data_server.cpp  data_server.h  mirror.cpp  mirror.h  wifi_mgr.cpp  wifi_mgr.h
(+157 files in other folders)
